[package]
name = "Fiddler-SAZ-Reader"
version = "0.1.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zip = "0.5"
select = "0.5.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
