[package]
name = "sazparser"
version = "0.1.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
description = "parser for saz files"
repository = "///"
keywords = ["fiddler", "parser", "zip"]
categories = ["parser-implementations"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zip = "0.5"
regex = "1.4.2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
